# ffmpeg_opencv

./: CMakeLists.txt  README.md
cmake/: FindOpus.cmake
src/: CMakeLists.txt  log.cpp  log.h  macros.h  main.cpp
src/media/: codec_holder.cpp  codec_holder.h  ffmpeg_utils.cpp  ffmpeg_utils.h  media_stream_output.cpp  media_stream_output.h  nal_units.cpp  nal_units.h  resampler.cpp  resampler.h
src/utils/: time_utils.cpp  time_utils.h  utils.cpp  utils.h
