CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

PROJECT("ffmpeg_opencv" VERSION 1.0.0.1 LANGUAGES CXX C)
SET(PROJECT_NAME_TITLE ${PROJECT_NAME} CACHE STRING "Title for ${PROJECT_NAME}")

OPTION(DEVELOPER_ENABLE_TESTS "Enable tests for ${PROJECT_NAME_TITLE} project" OFF)
OPTION(WITH_OPUS "Opus for ${PROJECT_NAME_TITLE} project" ON)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/cmake")

ADD_DEFINITIONS(-D__STDC_FORMAT_MACROS -D__STDC_CONSTANT_MACROS)

IF(WITH_OPUS)
    ADD_DEFINITIONS(-DWITH_OPUS)
ENDIF(WITH_OPUS)
ADD_SUBDIRECTORY(src)
